[package]
name = "quippers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "quippers"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32.1"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = "0.8.5"
